see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Apr-2010 Mark Dexter
+ New acltest (thank you Matt Thomas)
^ New methods in SeleniumJoomlaTestCase (thank you Matt Thomas)

17-Apr-2010 Mark Dexter
# Minor fix on ControlPanel0004 for language change

16-Apr-2010 Mark Dexter
+ New test for JParameter merge to test merge bug with integer 0

15-Apr-2010 Mark Dexter
# Fix up some changed language strings
# Fix doFrontendLogin to use config 
+ Add test for edit icons in front page and article layouts

12-Apr-2010 Mark Dexter
^ Change control_panel0004 test to test category reorder after category move

08-Apr-2010 Mark Dexter
^ Change doInstall.php to detect failure to install sample data

05-Apr-2010 Mark Dexter
+ Add phpunit.php files to system and unit folders to enable test debugging

04-Apr-2010 Mark Dexter
^ Finish JString unit tests
^ Fix up code coverage for JString unit tests

31-Mar-2010 Mark Dexter
# Minor fixes to control panel tests for changed wording on menus

27-Mar-2010 Mark Dexter
# Fix bug in doInstall.php 

26-Mar-2010 Mark Dexter
# Change menu0001Test.php to reflect new id in Module Edit

16-Mar-2010 Mark Dexter
# Adjusted tests for changes in core
+ Added new method to count verification errors
^ Improved message for verification errors to show file and line number

12-Mar 2010 Mark Dexter
^ Added new methods to SeleniumJoomlaTestCase (from Matt Thomas)

03-Mar-2010 Mark Dexter
# Fix doInstall.php to reflect SeleniumJoomlaTestCase changes

01-Mar-2010 Mark Dexter
^ Refactored SeleniumJoomlaTestCase methods and fixed test cases for new methods (from Matt Thomas)

21-Feb-2010 Mark Dexter