@@ -12,38 +12,49 @@ class Group0001Test extends SeleniumJoomlaTestCase
 {
 	function testCreatDeleteGroup()
 	{
-  	$this->setUp();
-	$this->gotoAdmin();  	
-  	$this->doAdminLogin();
-    $this->click("link=Groups");
-    $this->waitForPageToLoad("30000");  	
-	echo "Create new group Article Administrator\n";
-    $this->click("link=New");
-    $this->waitForPageToLoad("30000");
-    $saltGroup = mt_rand();
-    $this->type("jform_title", "Test Group".$saltGroup);
-    $this->select("jformparent_id", "label=- Registered");
-    $this->click("link=Save & Close");
-    $this->waitForPageToLoad("30000");
-    try {
-        $this->assertTrue($this->isTextPresent("Item successfully saved."));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-        array_push($this->verificationErrors, $e->getTraceAsString());
-    }  	
-    echo "Delete Article Administrator group.\n";	
-    $this->type("filter_search", "Test Group".$saltGroup);
-    $this->click("//button[@type='submit']");
-    $this->waitForPageToLoad("30000");
-    $this->click("toggle");
-    $this->click("//li[@id='toolbar-delete']/a/span");
-    $this->waitForPageToLoad("30000");
-    try {
-    	$this->assertTrue($this->isTextPresent("COM_USERS_N_GROUPS_DELETED"));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-    	array_push($this->verificationErrors, $e->getTraceAsString());
-    }
-	$this->doAdminLogout();
-	$this->countErrors();  	 
-  }
+		$this->setUp();
+		$this->gotoAdmin();
+		$this->doAdminLogin();
+		$this->click("link=Groups");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		echo "Create new group Article Administrator\n";
+		$this->click("link=New");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		$saltGroup = mt_rand();
+		$this->type("jform_title", "Test Group" . $saltGroup);
+		$this->select("jformparent_id", "label=- Registered");
+		$this->click("link=Save & Close");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		try
+		{
+			$this->assertTrue($this->isTextPresent("Item successfully saved."));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		echo "Delete Article Administrator group.\n";
+		$this->type("filter_search", "Test Group" . $saltGroup);
+		$this->click("//button[@type='submit']");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		$this->click("toggle");
+		$this->click("//li[@id='toolbar-delete']/a/span");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		try
+		{
+			$this->assertTrue($this->isTextPresent("COM_USERS_N_GROUPS_DELETED"));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		$this->doAdminLogout();
+		$this->countErrors();
+	}
 }
 ?>
