@@ -11,75 +11,96 @@ require_once 'SeleniumJoomlaTestCase.php';
 
 class User0002Test extends SeleniumJoomlaTestCase
 {
-  function testCreateVerifyDeleteUser()
-  {
-  	echo("Starting testMyTestCase\n");
-  	$this->setUp();	
-	$this->gotoAdmin();
-	$this->doAdminLogin();
-	
-	$salt1 = mt_rand();
-	$userName = 'My Test User' . $salt1;
-	$login = 'TestUser' . $salt1;
-	$email = $login . '@test.com';
-	$this->createUser($userName, $login, 'password', $email, 'Author');
+	function testCreateVerifyDeleteUser()
+	{
+		echo("Starting testMyTestCase\n");
+		$this->setUp();
+		$this->gotoAdmin();
+		$this->doAdminLogin();
 
-    echo("Verify existence of new user.\n");
-    try {
-        $this->assertTrue($this->isTextPresent("Item successfully saved."));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-        array_push($this->verificationErrors, $e->getTraceAsString());
-    }
-    $this->type("filter_search", "TestUser");
-    $this->click("//button[@type='submit']");
-    $this->waitForPageToLoad("30000");
-    try {
-        $this->assertTrue($this->isTextPresent("TestUser"));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-        array_push($this->verificationErrors, $e->getTraceAsString());
-    }
-    $this->click("link=Log out");
-    $this->waitForPageToLoad("30000");
-    echo("Go to home page.\n");    
-    $this->click("link=Go to site home page.");
-    $this->waitForPageToLoad("30000");
-    echo("Log in as TestUser.\n");    
-    $this->type("modlgn_username", "TestUser" . $salt1);
-    $this->type("modlgn_passwd", "password");
-    $this->click("Submit");
-    $this->waitForPageToLoad("30000");
-    echo("Verify existence of new user.\n");    
-    try {
-        $this->assertTrue($this->isTextPresent($userName));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-        array_push($this->verificationErrors, $e->getTraceAsString());
-    }
-    $this->click("link=Logout");
-    $this->waitForPageToLoad("30000");
-	$this->gotoAdmin();
-	$this->doAdminLogin();
-	
-	echo "Back to User Manager.\n";
-    $this->click("link=User Manager");
-    $this->waitForPageToLoad("30000");
-    
-    echo "Filter on user name\n";
-    $this->type("filter_search", $userName);
-    $this->click("//button[@type='submit']");
-    $this->waitForPageToLoad("30000");
-  
-    echo "Delete all users in view\n";
-    $this->click("toggle");
-    echo("Delete new user.\n");    
-    $this->click("//li[@id='toolbar-delete']/a/span");
-    $this->waitForPageToLoad("30000");
-    try {
-    	$this->assertTrue($this->isTextPresent("COM_USERS_N_USERS_DELETED"));
-    } catch (PHPUnit_Framework_AssertionFailedError $e) {
-    	array_push($this->verificationErrors, $e->getTraceAsString());
-    }
-    $this->click("link=Log out");
-    $this->waitForPageToLoad("30000");
-    $this->countErrors();
-  }
+		$salt1 = mt_rand();
+		$userName = 'My Test User' . $salt1;
+		$login = 'TestUser' . $salt1;
+		$email = $login . '@test.com';
+		$this->createUser($userName, $login, 'password', $email, 'Author');
+
+		echo("Verify existence of new user.\n");
+		try
+		{
+			$this->assertTrue($this->isTextPresent("Item successfully saved."));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		$this->type("filter_search", "TestUser");
+		$this->click("//button[@type='submit']");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		try
+		{
+			$this->assertTrue($this->isTextPresent("TestUser"));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		$this->click("link=Log out");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		echo("Go to home page.\n");
+		$this->click("link=Go to site home page.");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		echo("Log in as TestUser.\n");
+		$this->type("modlgn_username", "TestUser" . $salt1);
+		$this->type("modlgn_passwd", "password");
+		$this->click("Submit");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		echo("Verify existence of new user.\n");
+		try
+		{
+			$this->assertTrue($this->isTextPresent($userName));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		$this->click("link=Logout");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		$this->gotoAdmin();
+		$this->doAdminLogin();
+
+		echo "Back to User Manager.\n";
+		$this->click("link=User Manager");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+
+		echo "Filter on user name\n";
+		$this->type("filter_search", $userName);
+		$this->click("//button[@type='submit']");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+
+		echo "Delete all users in view\n";
+		$this->click("toggle");
+		echo("Delete new user.\n");
+		$this->click("//li[@id='toolbar-delete']/a/span");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		try
+		{
+			$this->assertTrue($this->isTextPresent("COM_USERS_N_USERS_DELETED"));
+		}
+		catch (PHPUnit_Framework_AssertionFailedError $e)
+		{
+			array_push($this->verificationErrors, $e->getTraceAsString());
+		}
+		$this->click("link=Log out");
+		$this->waitForPageToLoad("30000");
+		$this->checkNotices();
+		$this->countErrors();
+	}
 }
