@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+19-Apr-2010 Mark Dexter
+^ Add checkNotices() method in SeleniumJoomlaTestCase
+^ Implement checkNotices method in com_users tests
+
 18-Apr-2010 Mark Dexter
 + New acltest (thank you Matt Thomas)
 ^ New methods in SeleniumJoomlaTestCase (thank you Matt Thomas)
